take card and value cards

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
     />
     <link rel="stylesheet" href="/css/style.css" />
 
-    <title>Blackjack Toro</title>
+    <title>Toro Blackjack</title>
   </head>
   <body>
-    <header class="titleHeader">♠️ BLACKJACK TORO ♠️</header>
+    <header class="titleHeader">♠️ TORO BLACKJACK ♠️</header>
 
     <div class="mt-2">
       <div class="col text-center">
@@ -37,7 +37,7 @@
         <button class="btn btn-danger">Stop</button>
       </div>
     </div>
-
+    
     <div class="row container">
       <div class="col">
         <h1 class="players">Player 1 - <small>0</small></h1>
