--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
       href="https://fonts.googleapis.com/css2?family=Patua+One&display=swap"
       rel="stylesheet"
     />
-    <link href="https://fonts.googleapis.com/css2?family=Courgette&display=swap" rel="stylesheet">
+    <link
+      href="https://fonts.googleapis.com/css2?family=Courgette&display=swap"
+      rel="stylesheet"
+    />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
@@ -32,37 +35,37 @@
 
     <div class="mt-2">
       <div class="col text-center">
-        <button class="btn btn-success">New Game</button>
-        <button class="btn btn-primary">Other Card</button>
-        <button class="btn btn-danger">Stop</button>
+        <button id="btnNew" class="btn btn-success">New Game</button>
+        <button id="btnTake" class="btn btn-primary">Other Card</button>
+        <button id="btnStop" class="btn btn-danger">Stop</button>
       </div>
     </div>
-    
-    <div class="row container">
+
+    <div class="d-flex justify-content-center mt-4">
       <div class="col">
-        <h1 class="players">Player 1 - <small>0</small></h1>
+        <h1 class="players text-center">Player 1 - <small>0</small></h1>
         <div id="player-cards">
+          <!-- <img class="cardPlayer" src="/assets/cartas/2C.png" alt="" />
           <img class="cardPlayer" src="/assets/cartas/2C.png" alt="" />
           <img class="cardPlayer" src="/assets/cartas/2C.png" alt="" />
-          <img class="cardPlayer" src="/assets/cartas/2C.png" alt="" />
-          <img class="cardPlayer" src="/assets/cartas/2C.png" alt="" />
+          <img class="cardPlayer" src="/assets/cartas/2C.png" alt="" /> -->
         </div>
       </div>
     </div>
 
-    <div class="row container mt-2">
-        <div class="col">
-          <h1 class="players">Computer - <small>0</small></h1>
-          <div id="computer-cards">
-            <img class="cardPlayer" src="/assets/cartas/3C.png" alt="" />
-            <img class="cardPlayer" src="/assets/cartas/3C.png" alt="" />
-            <img class="cardPlayer" src="/assets/cartas/3C.png" alt="" />
-            <img class="cardPlayer" src="/assets/cartas/3C.png" alt="" />
-          </div>
+    <div class="d-flex justify-content-center mt-4">
+      <div class="col">
+        <h1 class="players text-center">Computer - <small>0</small></h1>
+        <div id="computer-cards">
+          <!-- <img class="cardPlayer" src="/assets/cartas/3C.png" alt="" />
+          <img class="cardPlayer" src="/assets/cartas/3C.png" alt="" />
+          <img class="cardPlayer" src="/assets/cartas/3C.png" alt="" />
+          <img class="cardPlayer" src="/assets/cartas/3C.png" alt="" /> -->
         </div>
       </div>
+    </div>
 
-      <script src="/js/underscore.js"></script>
+    <script src="/js/underscore.js"></script>
     <script src="/js/game.js"></script>
   </body>
 </html>
